抖音app下载引导页网站源码

--- a/背景透明字不透明/demo.html
+++ b/背景透明字不透明/demo.html
@@ -43,5 +43,5 @@ body{
     <div class="demo-txt">测测</div><!-- 不透明文字 -->
 	<a href="http://www.cnblogs.com/PeunZhang/p/4089894.html"></a>
 </div>
- 
+</body>
 </html>
